--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Pizzas-app</title>
+    <title>Pizza app</title>
     <script type="text/javascript">
       var pathSegmentsToKeep = 1;
 
